...
                                            <constraint firstAttribute="height" constant="40" id="NJA-QP-LLK"/>
                                        </constraints>
                                        <state key="normal" title="Log In"/>
                                        <connections>
                                            <action selector="loginTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ssi-vc-3L3"/>
...
                                            </connections>
                                        </barButtonItem>
                                        <barButtonItem key="rightBarButtonItem" title="Sign Up" id="1rY-zV-krW">
                                            <color key="tintColor" red="0.20392156859999999" green="0.59607843140000005" blue="0.85882352939999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            <connections>
...
                                        </constraints>
                                    </imageView>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sSg-ZL-2uV">
                                        <rect key="frame" x="0.0" y="120" width="280" height="40"/>
                                        <constraints>
...
                                        </userDefinedRuntimeAttributes>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Itz-4P-Npe">
                                        <rect key="frame" x="0.0" y="180" width="280" height="40"/>
                                        <nil key="textColor"/>
...
                                        </userDefinedRuntimeAttributes>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OEa-2A-XsZ">
                                        <rect key="frame" x="0.0" y="240" width="280" height="40"/>
                                        <nil key="textColor"/>
...
                                        </userDefinedRuntimeAttributes>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Phone Number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RNZ-8Z-LvH">
                                        <rect key="frame" x="0.0" y="300" width="280" height="40"/>
                                        <nil key="textColor"/>
...
                                        </userDefinedRuntimeAttributes>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WBW-Xh-TaP">
                                        <rect key="frame" x="0.0" y="360" width="280" height="40"/>
                                        <nil key="textColor"/>
...
                                        </userDefinedRuntimeAttributes>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirm Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FS1-bQ-4Kg">
                                        <rect key="frame" x="0.0" y="420" width="280" height="40"/>
                                        <nil key="textColor"/>
...
        <scene sceneID="uS7-qa-vAP">
            <objects>
                <viewController storyboardIdentifier="Profile" id="GWb-Hf-TgE" customClass="ProfileViewController" customModule="charith_cobsccomp182p_006" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="cLi-aB-0Qc">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
...
